<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sub_title">My Nanodegree Apps</string>
    <string name="app1">spotify streamer</string>
    <string name="app2">scores app</string>
    <string name="app3">library app</string>
    <string name="app4">build it bigger</string>
    <string name="app5">xyz reader</string>
    <string name="app6">capstone: my own app</string>
</resources>
