<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#B0BEC5"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/sub_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="25sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:text="@string/app1"
        android:id="@+id/button"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:textSize="14sp"
        android:background="#F08C35"
        android:elevation="8dp"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:text="@string/app2"
        android:id="@+id/button2"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:textSize="14sp"
        android:background="#F08C35"
        android:elevation="8dp"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:text="@string/app3"
        android:id="@+id/button3"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:textSize="14sp"
        android:background="#F08C35"
        android:elevation="8dp"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:text="@string/app4"
        android:id="@+id/button4"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:textSize="14sp"
        android:background="#F08C35"
        android:elevation="8dp"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:text="@string/app5"
        android:id="@+id/button5"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:textSize="14sp"
        android:background="#F08C35"
        android:elevation="8dp"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:text="@string/app6"
        android:id="@+id/button6"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        android:textSize="14sp"
        android:background="#D50000"
        android:elevation="8dp"/>

</RelativeLayout>
